add home section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="mockup-phone border-primary">
         <div class="camera"></div>
         <div class="display">
-          <div class="artboard artboard-demo phone-1">
+          <div class="artboard artboard-demo phone-3">
             <!-- login section  -->
             <div class="hero bg-base-200 min-h-screen">
                 <div class="hero-content">
@@ -31,7 +31,7 @@
                         <label class="label">
                           <span class="label-text">4 Digit Pin</span>
                         </label>
-                        <input type="password" placeholder="Enter 4 Digit Pin" class="input input-bordered" autocomplete="off" required />
+                        <input id="pin-number" type="password" placeholder="Enter 4 Digit Pin" class="input input-bordered" autocomplete="off" required />
                         <label class="label">
                           <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                         </label>
@@ -50,6 +50,6 @@
     </main>
 
 
-    <script src="./login.js"></script>
+    <script src="./js/login.js"></script>
   </body>
 </html>
