--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
             <!-- available balance -->
             <div class="stats shadow">
               <div class="stat">
-                <div class="stat-value">9400</div>
+                <div id="acount-balance" class="stat-value">9400</div>
                 <div class="stat-desc">Available Balance</div>
               </div>
             </div>
