implement cash out feature

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
             <div class="divider"></div>
 
             <!-- add money form -->
-             <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+             <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                 <form class="card-body">
                     <div class="form-control">
                       <label class="label">
@@ -53,6 +53,26 @@
                     </div>
                   </form>
              </div>
+             <!-- cash out start -->
+             <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+              <form class="card-body">
+                  <div class="form-control">
+                    <label class="label">
+                      <span class="label-text">Amount</span>
+                    </label>
+                    <input id="input-cash-out" type="text" placeholder="Cash out amount" class="input input-bordered" required />
+                  </div>
+                  <div class="form-control">
+                    <label class="label">
+                      <span class="label-text">Pin</span>
+                    </label>
+                    <input id="input-cash-out-pin" type="password" placeholder="Pin Number" class="input input-bordered" autocomplete="off" required />
+                  </div>
+                  <div class="form-control mt-6">
+                    <button id="btn-cash-out" class="btn btn-primary">Cash Out</button>
+                  </div>
+                </form>
+           </div>
           </div>
         </div>
       </div>
@@ -60,5 +80,6 @@
 
 
     <script src="./js/home.js"></script>
+    <script src="./js/cash_out.js"></script>
   </body>
 </html>
