--- a/home.html
+++ b/home.html
@@ -27,14 +27,14 @@
             <div class="divider"></div>
             <!-- user action button  -->
              <div>
-                <button class="btn btn-lg" >Add Money</button>
-                <button class="btn btn-lg" >Cash Out</button>
+                <button id="btn-show-add-money" class="btn btn-lg" >Add Money</button>
+                <button id="btn-show-cash-out" class="btn btn-lg" >Cash Out</button>
              </div>
              <!-- divider  -->
             <div class="divider"></div>
 
             <!-- add money form -->
-             <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+             <div id="add-money-form" class=" card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                 <form class="card-body">
                     <div class="form-control">
                       <label class="label">
@@ -54,7 +54,7 @@
                   </form>
              </div>
              <!-- cash out start -->
-             <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+             <div id="cash-out-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
               <form class="card-body">
                   <div class="form-control">
                     <label class="label">
@@ -81,5 +81,6 @@
 
     <script src="./js/home.js"></script>
     <script src="./js/cash_out.js"></script>
+    <script src="./js/features.js"></script>
   </body>
 </html>
